# template

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
.github/workflows/: build.workflow.yml
include/Handcrank/: Animation.hpp  Animator.hpp  Audio.hpp  Handcrank.hpp  ImageRenderObject.hpp  RectRenderObject.hpp  SpriteRenderObject.hpp  TextRenderObject.hpp  Utilities.hpp  Vector2.hpp
include/HandcrankEngine/: Animation.hpp  Animator.hpp  Audio.hpp  AudioCache.hpp  FontCache.hpp  HandcrankEngine.hpp  ImageRenderObject.hpp  InputHandler.hpp  RectRenderObject.hpp  Scene.hpp  SceneManager.hpp  SpriteRenderObject.hpp  TextRenderObject.hpp  TextureCache.hpp  TextureRenderObject.hpp  Utilities.hpp  Vector2.hpp  VertexRenderObject.hpp
resources/: Info.plist.in  icon.icns
src/: main.cpp
templates/: web-minimal.html
